# molt

./: .gitignore  Cargo.toml  FIXME  README.md  README.template.md
crates/derive_macro/: Cargo.toml
crates/derive_macro/src/: derive_cmp_syn.rs  derive_get_dependencies.rs  derive_molt_fields.rs  lib.rs  utils.rs
crates/molt_lib/: Cargo.toml
crates/molt_lib/src/: cmp_syn.rs  config.rs  ctx.rs  dependencies.rs  lib.rs  match_ctx.rs  match_pattern.rs  node.rs  node_list.rs  pattern.rs  rule.rs  span.rs
crates/rust_grammar/: Cargo.toml
crates/rust_grammar/src/: attr.rs  bigint.rs  buffer.rs  classify.rs  ctx.rs  custom_keyword.rs  custom_punctuation.rs  data.rs  derive.rs  discouraged.rs  drops.rs  error.rs  export.rs  expr.rs  ext.rs  file.rs  generics.rs  group.rs  ident.rs  item.rs  lib.rs  lifetime.rs  lit.rs  lookahead.rs  mac.rs  macros.rs  meta.rs  node.rs  op.rs  parse.rs  parse_quote.rs  pat.rs  path.rs  precedence.rs  punctuated.rs  restriction.rs  sealed.rs  stmt.rs  token.rs  ty.rs  (+1 more)
crates/syntax_ctx/: Cargo.toml
markdown_tests/: assert_eq.md  basic.md  basic2.md  basic_mod.md  basic_mod2.md  control_flow_checker.md  control_flow_checker2.md  control_flow_checker3.md  control_flow_checker4.md  destructure_pat.md  duplicate_fn.md  example_swap_method_args.md  for.md  if_with_non_boolean_condition.md  if_with_wrong_return_value.md  implicit_return.md  literals.md  map_or.md  match_let_binding.md  match_statement.md  parse_error.md  parse_unknown_type.md  rename_fn.md  return.md  simplest_shit.md  swap_function_args.md
old_tests/array_elements/: main.rs
old_tests/arrays/: array.molt  main.rs
old_tests/attrs/: expr.molt
old_tests/closure/: inputs.molt  main.rs
old_tests/consts/: main.rs
old_tests/control_flow/: main.rs
old_tests/expr/: array_len.molt  assign_lhs.molt  assign_rhs.molt  await_.molt  binary.molt  cast.molt  field_access.molt  for_loop.molt  function_chain.molt  if_.molt  nested_stmt.molt  return_.molt  stmts.molt
old_tests/fields/: field_var.molt  main.rs
old_tests/fns/: async_rule.molt  const_rule.molt  fns.molt
old_tests/function_args/: fn_.molt  main.rs
old_tests/generics/: item_struct.molt  item_trait.molt  main.rs  signature.molt
old_tests/lists/: single.molt
old_tests/macros/: macros.molt
old_tests/modify/: rename.molt
old_tests/molt_grammar/: non_inferable_command.molt  syntax_error2.molt  undefined_var.molt  unnecessary_semicolon.molt
old_tests/pat/: main.rs  nested.molt  or.molt  pat.molt  slice_list.molt  struct_.molt  subpattern.molt  tuple.molt  tuple_list.molt
old_tests/struct_fields/: main.rs  named.molt  unnamed.molt
old_tests/tuple_types/: main.rs
old_tests/types/: field_type.molt  impl_const.molt  main.rs  pat_type.molt  predicate.molt  receiver.molt  trait_const.molt  type_alias.molt  type_bare_fn.molt
old_tests/visibility/: enum_.molt  field.molt  main.rs  module.molt  rule_mod_1.molt  rule_mod_3.molt  struct_.molt  trait_.molt
src/: ast.rs  change_buffer.rs  cli.rs  cmp_syn.rs  config.rs  convert.rs  ctrl_c.rs  ctx.rs  diag.rs  error.rs  input.rs  interpreter.rs  item_or_var.rs  lib.rs  lsp.rs  main.rs  mangle.rs  match_ctx.rs  match_pattern.rs  match_pattern_backup.rs  modify.rs  node.rs  node_list.rs  pattern.rs  resolve.rs  rule.rs  rust_ast.rs  span.rs  spec.rs  storage.rs  temporary_modification.rs  term.rs  tests.rs  transform.rs  transformation.rs  type_check.rs  utils.rs  writer.rs
src/grammar/: ast.rs  convert.rs  mod.rs
src/interpreter/: function.rs  value.rs
src/match_pattern/: match_ctx.rs  mod.rs
src/modify/: diff.rs
src/modify2/: diff.rs
src/molt_grammar/: mod.rs  parse.rs
src/molt_lang/: builtin_fn.rs  context.rs  grammar.rs  index_types.rs  interpreter.rs  mod.rs  parse_pats.rs  resolve.rs  resolver.rs  runtime_ctx.rs  scope.rs  type_definitions.rs  typechecker.rs  visitor.rs
src/new_parser/: cursor.rs  error.rs  mod.rs  molt_grammar.rs  node.rs
src/parser/: ATTRIBUTION.md  buffer.rs  cursor.rs  custom_keyword.rs  custom_punctuation.rs  discouraged.rs  error.rs  export.rs  group.rs  lookahead.rs  mod.rs  molt_grammar.rs  node.rs  parse.rs  punctuated.rs  rust_grammar.rs  span.rs  tests.rs  token.rs
src/rust_grammar/: attr.rs  buffer.rs  classify.rs  custom_keyword.rs  custom_punctuation.rs  data.rs  derive.rs  discouraged.rs  error.rs  export.rs  expr.rs  ext.rs  file.rs  generics.rs  group.rs  ident.rs  item.rs  lifetime.rs  lit.rs  lookahead.rs  mac.rs  macros.rs  mod.rs  node.rs  op.rs  parse.rs  pat.rs  path.rs  precedence.rs  punctuated.rs  restriction.rs  stmt.rs  token.rs  ty.rs  verbatim.rs
src/snapshots/: ast__tests__add_generic.snap  ast__tests__add_generic.snap.new  ast__tests__rename.snap.new  molt__tests__array_elements__match___elements.snap  molt__tests__arrays__match___array.snap  molt__tests__closure.snap  molt__tests__closure__match___closure.snap  molt__tests__consts__match___exprs.snap  molt__tests__early_boundary_rule.snap  molt__tests__expr__match___array_len.snap  molt__tests__expr__match___assign_lhs.snap  molt__tests__expr__match___assign_rhs.snap  molt__tests__expr__match___await_.snap  molt__tests__expr__match___binary.snap  molt__tests__expr__match___binary_lhs.snap  molt__tests__expr__match___call.snap  molt__tests__expr__match___cast.snap  molt__tests__expr__match___closure.snap  molt__tests__expr__match___early_boundary_rule.snap  molt__tests__expr__match___expr.snap  molt__tests__expr__match___for_loop.snap  molt__tests__expr__match___function_chain.snap  molt__tests__expr__match___if_.snap  molt__tests__expr__match___nested_stmt.snap  molt__tests__expr__match___return_.snap  molt__tests__expr__match___stmts.snap  molt__tests__expr__match___trailing_brace.snap  (+42 more)
test_data/: a.molt  a.rs  exprs.molt  function.molt  function.rs  function2.molt  function2.rs  ident.molt  ident.rs  indirection.molt  indirection.rs  lit.molt  lit.rs  multiple_vars.molt  rename.molt  rename.rs  rename.transform  sum.molt  sum.rs  tuple.molt  tuple.rs
tests/: markdown.rs  mdtest.rs  readme.rs  rename.transform
tools/: render_readme.py
(+289 files in other folders)
