[workspace]
members = ["crates/*"]
exclude = ["test_data/type_annotations"]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tehforsch/molt"
edition = "2024"

[package]
name = "molt"
default-run = "molt"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
codespan-reporting = "0.12.0"
walkdir = "2.5.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lsp-types = "0.95.0" # 0.96 introduces a different URI type which makes life hell
similar = "2.4"
proc-macro2 = { version = "1.0.91", default-features = false, features = ["span-locations"] }
unicode-ident = "1"
ctrlc = "3.4"

derive_macro = { path = "crates/derive_macro" }

[features]
debug-print = []
default = ["debug-print"]

[dev-dependencies]
insta = { version = "1.41.1"}
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
tempfile = "3.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bin]]
name = "molt"
path = "src/main.rs"

[profile.dev]
debug = "line-tables-only"
