[package]
name = "derive_macro"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "Internal proc-macros for molt."
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
