[package]
name = "derive_macro"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "Internal proc-macros for molt."
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.101", features = ["full"] }
proc-macro2 = { version = "1.0.95" }

[lib]
proc-macro = true
