[package]
name = "molt_lib"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
description = "The AST storage context for molt."
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = { version = "1.0.91", default-features = false, features = ["span-locations"] }