[package]
name = "rust_grammar"
description = "A copy of the syn crate with minor modifications"
repository.workspace = true
version.workspace = true
license.workspace = true
edition = "2021"

[features]
default = ["parsing", "clone-impls", "proc-macro", "full"]
derive = []
full = []
parsing = []
printing = ["dep:quote"]
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []
proc-macro = ["proc-macro2/proc-macro", "quote?/proc-macro"]
test = []

[dependencies]
proc-macro2 = { version = "1.0.91", default-features = false, features = ["span-locations"] }
quote = { version = "1.0.35", optional = true, default-features = false }
unicode-ident = "1"
molt_lib = { path = "../molt_lib" }
derive_macro = { path = "../derive_macro", default-features = false }