[package]
name = "rust_grammar"
description = "A copy of the syn crate with minor modifications"
repository.workspace = true
version.workspace = true
license.workspace = true
edition = "2021"

[features]
default = ["parsing", "clone-impls", "proc-macro", "full"]
derive = []
full = []
parsing = []
visit = []
visit-mut = []
fold = []
clone-impls = []
proc-macro = ["proc-macro2/proc-macro"]

[dependencies]
proc-macro2 = { version = "1.0.91", default-features = false, features = ["span-locations"] }
unicode-ident = "1"
molt_lib = { path = "../molt_lib" }
derive_macro = { path = "../derive_macro", default-features = false }