[package]
name = "rust_grammar"
description = "A fork of the syn crate. Parsing is heavily modified to parse into a flattened arena-like structure instead of a fully nested AST. This enables parsing Rust as well as Molt's modified version of Rust in which every node in the arena can also be a variable."
repository.workspace = true
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
proc-macro2 = { version = "1.0.91", default-features = false, features = ["span-locations"] }
unicode-ident = "1"
molt_lib = { path = "../molt_lib" }
derive_macro = { path = "../derive_macro", default-features = false }